--- a/WinDocking.csproj
+++ b/WinDocking.csproj
@@ -180,61 +180,61 @@
     <Compile Include="Docking\DefaultTheme.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockAreasEditor.cs" />
-    <Compile Include="Docking\DockContent.cs">
+    <Compile Include="Docking\DockContent\DockAreasEditor.cs" />
+    <Compile Include="Docking\DockContent\DockContent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Docking\DockContentCollection.cs" />
-    <Compile Include="Docking\DockContentEventArgs.cs" />
-    <Compile Include="Docking\DockContentHandler.cs" />
-    <Compile Include="Docking\DockOutlineBase.cs" />
-    <Compile Include="Docking\DockPane.cs">
+    <Compile Include="Docking\DockContent\DockContentCollection.cs" />
+    <Compile Include="Docking\DockContent\DockContentEventArgs.cs" />
+    <Compile Include="Docking\DockContent\DockContentHandler.cs" />
+    <Compile Include="Docking\DockContent\DockOutlineBase.cs" />
+    <Compile Include="Docking\Pane\DockPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Docking\DockPane.SplitterControl.cs">
+    <Compile Include="Docking\Pane\DockPane.SplitterControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Docking\DockPaneCaptionBase.cs">
+    <Compile Include="Docking\Pane\DockPaneCaptionBase.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPaneCollection.cs" />
-    <Compile Include="Docking\DockPanel.Appearance.cs">
+    <Compile Include="Docking\Pane\DockPaneCollection.cs" />
+    <Compile Include="Docking\DockPanel\DockPanel.Appearance.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.AutoHideWindow.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.AutoHideWindow.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.DockDragHandler.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.DockDragHandler.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.DragHandler.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.DragHandler.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.FocusManager.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.FocusManager.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.MdiClientController.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.MdiClientController.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.Persistor.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.Persistor.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanel.SplitterDragHandler.cs">
+    <Compile Include="Docking\DockPanel\DockPanel.SplitterDragHandler.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockPanelColorPalette.cs" />
-    <Compile Include="Docking\DockPanelExtender.cs" />
-    <Compile Include="Docking\DockPanelSkin.cs" />
-    <Compile Include="Docking\DockPaneStripBase.cs">
+    <Compile Include="Docking\DockPanel\DockPanelColorPalette.cs" />
+    <Compile Include="Docking\DockPanel\DockPanelExtender.cs" />
+    <Compile Include="Docking\DockPanel\DockPanelSkin.cs" />
+    <Compile Include="Docking\Pane\DockPaneStripBase.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockWindow.cs">
+    <Compile Include="Docking\DockContent\DockWindow.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\DockWindowCollection.cs" />
+    <Compile Include="Docking\DockContent\DockWindowCollection.cs" />
     <Compile Include="Docking\DragForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -243,10 +243,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Docking\Enums.cs" />
-    <Compile Include="Docking\FloatWindow.cs">
+    <Compile Include="Docking\DockContent\FloatWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Docking\FloatWindowCollection.cs" />
+    <Compile Include="Docking\DockContent\FloatWindowCollection.cs" />
     <Compile Include="Docking\Helpers\DockHelper.cs" />
     <Compile Include="Docking\Helpers\DrawHelper.cs" />
     <Compile Include="Docking\Helpers\ResourceHelper.cs" />
@@ -260,8 +260,8 @@
     <Compile Include="Docking\LayoutUtils.cs" />
     <Compile Include="Docking\Localization.cs" />
     <Compile Include="Docking\Measures.cs" />
-    <Compile Include="Docking\NestedDockingStatus.cs" />
-    <Compile Include="Docking\NestedPaneCollection.cs" />
+    <Compile Include="Docking\DockContent\NestedDockingStatus.cs" />
+    <Compile Include="Docking\DockContent\NestedPaneCollection.cs" />
     <Compile Include="Docking\PatchController.cs" />
     <Compile Include="Docking\SplitterBase.cs">
       <SubType>Component</SubType>
@@ -271,16 +271,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
-    <Compile Include="Docking\ThemeBase.cs">
+    <Compile Include="Docking\Extender\ThemeBase.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\VisibleNestedPaneCollection.cs" />
-    <Compile Include="Docking\VisualStudioColorTable.cs" />
-    <Compile Include="Docking\VToolStripExtender.cs">
+    <Compile Include="Docking\Extender\VisibleNestedPaneCollection.cs" />
+    <Compile Include="Docking\Extender\VisualStudioColorTable.cs" />
+    <Compile Include="Docking\Extender\VToolStripExtender.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Docking\VToolStripExtender.Designer.cs" />
-    <Compile Include="Docking\VToolStripRenderer.cs" />
+    <Compile Include="Docking\Extender\VToolStripExtender.Designer.cs" />
+    <Compile Include="Docking\Extender\VToolStripRenderer.cs" />
     <Compile Include="Docking\Win32\Enums.cs" />
     <Compile Include="Docking\Win32\NativeMethods.cs" />
     <Compile Include="DockViewContent.cs">
@@ -431,7 +431,8 @@
     <None Include="Resources\MaskWindowTop.png" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Docking\DockPanel.bmp" />
+    <EmbeddedResource Include="Docking\DockPanel\DockPanel.bmp" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
